demo-devops/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-dev
  labels:
    environment: dev
    name: app-dev
