demo-devops/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  namespace: app-dev
spec:
  selector:
    app: nginx-app
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: metrics
    port: 9113
    targetPort: 9113
  type: ClusterIP
